new sgt_moneda route app

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -162,7 +162,7 @@
                     <li ui-sref-active="active"><a ui-sref="app.gallery.v2">Gallery v2</a></li>
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.moneda_tipo')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.moneda')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-euro"></i>
@@ -171,9 +171,15 @@
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.moneda.todos">Moneda</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.moneda.crear">Moneda Actualizar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todos">Moneda Tipos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.crear">Moneda Crear</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.buscar">Moneda Buscar</a></li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.moneda_tipo')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b> Moneda Tipos</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todos">Moneda Tipos</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.crear">Moneda Crear</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.buscar">Moneda Buscar</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
             </li>
          
