--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="MonedaTipoCrearController">
+<div ng-controller="MonedaCrearController">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
@@ -30,7 +30,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ID MONEDA TIPO</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
+                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_id" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -54,7 +54,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Guardar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda()">Guardar</button>
                             </div>
                         </div>
                     </form>
