--- a/views/moneda_todos.html
+++ b/views/moneda_todos.html
@@ -41,7 +41,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="item in sgt_monedas_tipo">
+                        <tr ng-repeat="item in sgt_monedas">
                             <td> {{item.mone_id}} </td>
                             <td> {{item.monet_id}} </td>
                             <td> {{item.mone_fecha}} </td>
