--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -30,7 +30,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ID MONEDA TIPO</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_id" />
+                                <input type="text" class="form-control" placeholder="" ng-model="monet_id" />
                             </div>
                         </div>
                         <div class="form-group">
