--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -33,7 +33,7 @@
                                 <input type="text" class="form-control" placeholder="" ng-model="monet_id" />
                             </div>
                         </div>
-                        <div class="form-group">
+                       <!-- <div class="form-group">
                             <label class="control-label col-md-3">Fecha Actualización</label>
                             <div class="col-md-5">
                                 <div class="input-group date" id="datetimepicker1">
@@ -42,6 +42,13 @@
                                         <span class="glyphicon glyphicon-calendar"></span>
                                     </span>
                                 </div>
+                            </div>
+                        </div>-->
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="12/12/12 21:25:58" ng-model="mone_fecha" />
                             </div>
                         </div>
                         <div class="form-group">
