--- a/views/moneda_todos.html
+++ b/views/moneda_todos.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="panel-body">
-                    <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a></p></div>
+                    <div><p><a ui-sref="app.moneda.crear" class="btn btn-success">Nueva Actualización </a></p></div>
 
                     <table class="table table-striped table-bordered" >
                         <thead>
