--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -28,6 +28,15 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
+                            <label class="col-md-3 control-label">Moneda Tipo</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option ng-repeat="item in sgt_monedas_tipo">{{item.monet_codigo}}</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-md-3 control-label">ID MONEDA TIPO</label>
                             <div class="col-md-5">
                                 <input type="text" class="form-control" placeholder="" ng-model="monet_id" />
