--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="MonedaCrearController">
+<div ng-controller="MonedaCrearController" ng-init="cargarMonedas_Tipo()">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
