--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -33,14 +33,7 @@
                                 <select class="form-control selectpicker" data-size="10" data-live-search="true" data-style="btn-danger">
                                     <option value="" selected>Select a Country</option>
                                     <option value="AF">Afghanistan</option>
-                                    <option value="AL">Albania</option>
-                                    <option value="DZ">Algeria</option>
-                                    <option value="AS">American Samoa</option>
-                                    <option value="AD">Andorra</option>
-                                    <option value="AO">Angola</option>
-                                    <option value="AI">Anguilla</option>
-                                    <option value="AQ">Antarctica</option>
-                                    <option value="AG">Antigua and Barbuda</option>
+                                    <option ng-repeat="item in sgt_monedas_tipo" value="item.monet._id">{{item.monet_codigo }} - {{item.monet_nombre}}</option>
                                 </select>
                             </div>
                         </div>
@@ -48,7 +41,7 @@
                             <label class="col-md-3 control-label">Moneda Tipo</label>
                             <div class="col-md-9">
                                 <select class="form-control">
-                                    <option ng-repeat="item in sgt_monedas_tipo">{{item.monet_codigo}}</option>
+
                                     <option>Otro</option>
                                 </select>
                             </div>
