--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -27,22 +27,13 @@
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
-                        <div class="form-group">
-                            <label class="control-label col-md-3">Theme Danger</label>
-                            <div class="col-md-8">
-                                <select class="form-control selectpicker" data-size="10" data-live-search="true" data-style="btn-danger">
-                                    <option value="" selected>Select a Country</option>
-                                    <option value="AF">Afghanistan</option>
-                                    <option ng-repeat="item in sgt_monedas_tipo" >{{item.monet_codigo }} - {{item.monet_nombre}}</option>
-                                </select>
-                            </div>
-                        </div>
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Moneda Tipo</label>
-                            <div class="col-md-9">
+                            <div class="col-md-5">
                                 <select class="form-control">
-                                    <option ng-repeat="item in sgt_monedas_tipo" >{{item.monet_codigo }} - {{item.monet_nombre}}</option>
-                                    <option>Otro</option>
+                                    <option ng-repeat="item in sgt_monedas_tipo" value="item.monet._id">{{item.monet_codigo }} - {{item.monet_nombre}}</option>
+
                                 </select>
                             </div>
                         </div>
