moneda con moneda tipo crear option choise

--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -32,7 +32,7 @@
                             <label class="col-md-3 control-label">Moneda Tipo</label>
                             <div class="col-md-5">
                                 <select class="form-control">
-                                    <option ng-repeat="item in sgt_monedas_tipo" value="item.monet._id" ng-model="monet_id">{{item.monet_codigo }} - {{item.monet_nombre}}</option>
+                                    <option ng-options="item in sgt_monedas_tipo"  ng-model="monet_id">{{item.monet_codigo }} - {{item.monet_nombre}}</option>
 
                                 </select>
                             </div>
