--- a/views/moneda_crear.html
+++ b/views/moneda_crear.html
@@ -32,7 +32,7 @@
                             <label class="col-md-3 control-label">Moneda Tipo</label>
                             <div class="col-md-5">
                                 <select class="form-control" ng-model="monet_id">
-                                    <option ng-repeat="item in sgt_monedas_tipo" value="{{item.monet._id}}" >{{item.monet_codigo }} - {{item.monet_nombre}}</option>
+                                    <option ng-repeat="item in sgt_monedas_tipo" value="{{item._id}}" >{{item.monet_codigo }} - {{item.monet_nombre}}</option>
 
                                 </select>
                             </div>
