new menu proveedor

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -83,7 +83,7 @@
                     <li class="has-sub" ng-class="{active:$state.includes('app.proveedor.tipo')}">
                         <a href="javascript:;"><b class="caret pull-right"></b> Managed Tables</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.proveedor.todos">Proveedor Tipo</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.proveedor.tipo.todos">Proveedor Tipo</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.proveedor.tipo.crear">Proveedor Tipo Crear</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.proveedor.tipo.buscar">Proveedor Tipo Buscar</a></li>
                         </ul>
