--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -81,7 +81,7 @@
                     <li ui-sref-active="active"><a ui-sref="app.proveedor.crear">Proveedor Crear</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.proveedor.buscar">Proveedor Buscar</a></li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.proveedor.tipo')}">
-                        <a href="javascript:;"><b class="caret pull-right"></b> Managed Tables</a>
+                        <a href="javascript:;"><b class="caret pull-right"></b> Proveedor Tipo</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.proveedor.tipo.todos">Proveedor Tipo</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.proveedor.tipo.crear">Proveedor Tipo Crear</a></li>
