--- a/views/proveedor_tipo_todos.html
+++ b/views/proveedor_tipo_todos.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+<div  ng-controller="tablaProveedorTipoDefaultController" ng-init="cargarProveedor()">
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Proveedor</a></li>
+        <li class="active">Tabla Proveedor Tipo</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Tabla Proveedor Tipo <small>Gestión de Proveedores</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+        <!-- begin col-12 -->
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="table-basic-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Tabla Proveedor Tipo</h4>
+                </div>
+
+                <div class="panel-body">
+                    <div><p><a ui-sref="app.proveedor.tipo.crear" class="btn btn-success">Nuevo Proveedor </a></p></div>
+
+                    <table class="table table-striped table-bordered" >
+                        <thead>
+                        <tr>
+                            <th> ID </th>
+                            <th> Tipo </th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="item in sgt_proveedor_tipo">
+                            <td> {{item.provt_id}} </td>
+                            <td> {{item.provt_tipo}} </td>
+                            <td> <a href="/#/app/proveedor/proveedor_tipo/editar/{{item._id}}" class="btn btn-info" > Editar </a> </td>
+                            <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarProveedor_Tipo(item._id)"> Eliminar </a> </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
