app.js proveedor_tipo + controller+html

--- a/views/proveedor_tipo_todos.html
+++ b/views/proveedor_tipo_todos.html
@@ -1,5 +1,5 @@
 
-<div  ng-controller="tablaProveedorTipoDefaultController" ng-init="cargarProveedor()">
+<div  ng-controller="tablaProveedorTipoDefaultController" ng-init="cargarProveedor_Tipo()">
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Proveedor</a></li>
