--- a/views/proveedor_tipo_editar.html
+++ b/views/proveedor_tipo_editar.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProveedorTipoEditarController" ng-init="cargarProveedor_Tipo()">
+<div ng-controller="ProveedorTipoEditarController" ng-init="recuperarProveedor_Tipo()">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
