--- a/views/proveedor_crear.html
+++ b/views/proveedor_crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProveedorCrearController" ng-init="cargarProveedorTipo()">
+<div ng-controller="ProveedorCrearController" ng-init="cargarProveedor_Tipo()">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
