--- a/views/proveedor_crear.html
+++ b/views/proveedor_crear.html
@@ -140,7 +140,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Formulario 30</label>
                             <div class="col-md-6">
-                                <input type="time" class="form-control" placeholder="http://dropbox.com/docs/formulario30.jpg" ng-model="prov_formulario_30" />
+                                <input type="text" class="form-control" placeholder="http://dropbox.com/docs/formulario30.jpg" ng-model="prov_formulario_30" />
                             </div>
                         </div>
                         <div class="form-group">
