fix error proveedor crear controller

--- a/views/proveedor_todos.html
+++ b/views/proveedor_todos.html
@@ -48,7 +48,7 @@
                             <td> {{item.prov_giro}}</td>
                             <td> {{item.prov_telefono}}</td>
                             <td> {{item.prov_direccion}}</td>
-                            <td> <a href="/#/app/proveedor/proveedor/editar/{{item._id}}" class="btn btn-info" > Editar </a> </td>
+                            <td> <a href="/#/app/proveedor/editar/{{item._id}}" class="btn btn-info" > Editar </a> </td>
                             <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarProveedor(item._id)"> Eliminar </a> </td>
                         </tr>
                         </tbody>
