--- a/views/proveedor_todos.html
+++ b/views/proveedor_todos.html
@@ -7,7 +7,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tabla Proveedor Tipo <small>Gestión de Proveedores</small></h1>
+    <h1 class="page-header">Tabla Proveedor <small>Gestión de Proveedores</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
