--- a/views/proveedor_editar.html
+++ b/views/proveedor_editar.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProveedorCrearController" ng-init="cargarProveedor()">
+<div ng-controller="ProveedorCrearController" ng-init="recuperarProveedor()">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
