--- a/views/proveedor_todos.html
+++ b/views/proveedor_todos.html
@@ -34,7 +34,7 @@
                         <tr>
                             <th> RUT </th>
                             <th> Razon Social</th>
-                            <th> Giro</th>
+                            <th> Tipo</th>
                             <th> Telefono</th>
                             <th> Dirección</th>
                             <th> Editar</th>
