--- a/views/moneda_todos.html
+++ b/views/moneda_todos.html
@@ -29,7 +29,7 @@
                 <div class="panel-body">
                     <div><p><a ui-sref="app.moneda.crear" class="btn btn-success">Nueva Actualización </a></p></div>
 
-                    <table class="table table-striped table-bordered" >
+                    <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
                             <th> Pais</th>
