--- a/views/moneda_todos.html
+++ b/views/moneda_todos.html
@@ -9,7 +9,7 @@
     <!-- begin page-header -->
     <h1 class="page-header">Tabla Monedas <small>Gestión de Pagos</small></h1>
     <!-- end page-header -->
-0
+
     <!-- begin row -->
     <div class="row">
         <!-- begin col-12 -->
@@ -29,7 +29,7 @@
                 <div class="panel-body">
                     <div><p><a ui-sref="app.moneda.crear" class="btn btn-success">Nueva Actualización </a></p></div>
 
-                    <table  class="table table-striped table-bordered">
+                    <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
                             <th> Pais</th>
