test datatable first cargarmoneda()

--- a/views/moneda_todos.html
+++ b/views/moneda_todos.html
@@ -40,13 +40,13 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="item in sgt_monedas">
+                       <!-- <tr ng-repeat="item in sgt_monedas">
                             <td> {{item.monet_id.monet_pais}}</td>
                             <td> {{item.monet_id.monet_codigo}} </td>
                             <td> {{item.mone_fecha}} </td>
                             <td> {{item.mone_valor}} </td>
                             <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda(item._id)"> Eliminar </a> </td>
-                        </tr>
+                        </tr>-->
                         </tbody>
                     </table>
                 </div>
