--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -29,26 +29,24 @@
                 <div class="panel-body">
                     <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a></p></div>
 
-                    <table class="table table-striped table-bordered" >
+                    <table id="data-table" class="table table-striped table-bordered" >
                         <thead>
                         <tr>
                             <th> ID </th>
                             <th> Nombre </th>
                             <th> Codigo ISO </th>
                             <th> Pais</th>
-                            <th> Editar </th>
-                            <th> Eliminar </th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="item in sgt_monedas_tipo">
+                        <!--<tr ng-repeat="item in sgt_monedas_tipo">
                             <td> {{item.monet_id}} </td>
                             <td> {{item.monet_nombre}} </td>
                             <td> {{item.monet_codigo}} </td>
                             <td> {{item.monet_pais}} </td>
                             <td> <a href="/#/app/moneda_tipo/editar/{{item._id}}" class="btn btn-info" > Editar </a> </td>
                             <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
-                        </tr>
+                        </tr>-->
                         </tbody>
                     </table>
                 </div>
