--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -28,7 +28,7 @@
 
                 <div class="panel-body">
                     <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a></p></div>
-
+                    <div><a  ng-click="editar()" class="btn btn-info" > Editar </a></div>
                     <table id="data-table" class="table table-striped table-bordered" >
                         <thead>
                         <tr>
@@ -44,7 +44,7 @@
                             <td> {{item.monet_nombre}} </td>
                             <td> {{item.monet_codigo}} </td>
                             <td> {{item.monet_pais}} </td>
-                            <td> <a href="/#/app/moneda_tipo/editar/{{item._id}}" class="btn btn-info" > Editar </a> </td>
+                            <td>  </td>
                             <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
                         </tr>-->
                         </tbody>
