--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -28,7 +28,7 @@
 
                 <div class="panel-body">
                     <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a></p></div>
-                    <div><a  ng-click="editar()" class="btn btn-info" > Editar </a></div>
+                    <div><a href="javascript:void(0);"  ng-click="editar()" class="btn btn-info" > Editar </a></div>
                     <table id="data-table" class="table table-striped table-bordered" >
                         <thead>
                         <tr>
