--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="panel-body">
-                    <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a>  <a href="javascript:void(0);" class="btn btn-danger" ng-click="editar()"> Eliminar </a> </p></div>
+                    <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a>   </p></div>
 
                     <table id="data-table" class="table table-striped table-bordered" >
                         <thead>
