--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -36,6 +36,8 @@
                             <th> Nombre </th>
                             <th> Codigo ISO </th>
                             <th> Pais</th>
+                            <th> Editar</th>
+                            <th> Eliminar</th>
                         </tr>
                         </thead>
                         <tbody>
