--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -176,12 +176,12 @@
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.moneda.todos">Moneda</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.moneda.crear">Moneda Actualizar</a></li>
-                    <li class="has-sub" ng-class="{active:$state.includes('app.moneda_tipo')}">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.moneda.tipo')}">
                         <a href="javascript:;"><b class="caret pull-right"></b> Moneda Tipos</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todos">Moneda Tipos</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.crear">Moneda Crear</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.buscar">Moneda Buscar</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.moneda.tipo.todos">Moneda Tipos</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.moneda.tipo.crear">Moneda Crear</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.moneda.tipo.buscar">Moneda Buscar</a></li>
                         </ul>
                     </li>
 
