change route of moneda tipo to moneda todos $location

--- a/views/moneda_tipo_eliminar.html
+++ b/views/moneda_tipo_eliminar.html
@@ -1,1 +1,72 @@
-ok
+<div ng-controller="MonedaTipoEditarController" ng-init="recuperarMoneda_Tipo()">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Moneda</a></li>
+        <li class="active">Edición</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Moneda Tipo <small>Formulario de Edición</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+        <!-- begin col-12 -->
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-stuff-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Formulario Edición de Moneda Tipo</h4>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">ISO ID</label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id"  />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Nombre</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Codigo</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo"   />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">País</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="ESTADOS UNIDOS DE AMERICA" ng-model="monet_pais" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Enviar</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Guardar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+        <!-- end col-12 -->
+
+    </div>
+    <!-- end row -->
+</div>
