--- a/views/moneda_tipo_editar.html
+++ b/views/moneda_tipo_editar.html
@@ -36,7 +36,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Nombre</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
+                                <input type="text" class="form-control" placeholder="Cargando" ng-model="monet_nombre" />
                             </div>
 
                         </div>
@@ -44,13 +44,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Codigo</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo"   />
+                                <input type="text" class="form-control" placeholder="Cargando" ng_model="monet_codigo"   />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">País</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="ESTADOS UNIDOS DE AMERICA" ng-model="monet_pais" />
+                                <input type="text" class="form-control" placeholder="Cargando" ng-model="monet_pais" />
                             </div>
                         </div>
 
