--- a/views/proveedor_todos.html
+++ b/views/proveedor_todos.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="panel-body">
-                    <div><p><a ui-sref="app.proveedor.tipo.crear" class="btn btn-success">Nuevo Proveedor </a></p></div>
+                    <div><p><a ui-sref="app.proveedor.crear" class="btn btn-success">Nuevo Proveedor </a></p></div>
 
                     <table class="table table-striped table-bordered" >
                         <thead>
