--- a/views/proveedor_crear.html
+++ b/views/proveedor_crear.html
@@ -102,8 +102,29 @@
                                 <input type="text" class="form-control" placeholder="http://www.fedex.com/cl" ng-model="prov_web" />
                             </div>
                         </div>
-
-
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Contacto</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="Jorge Maestre Campusano" ng-model="prov_concacto" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Celular </label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="+56 9 3698 4477" ng-model="prov_celular" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Estado</label>
+                            <div class="col-md-9">
+                                <select class="form-control" ng-model="prov_estado">
+                                    <option>1 Habilitado</option>
+                                    <option>2 Suspendido</option>
+                                    <option>3 Vencido</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
