--- a/views/proveedor_crear.html
+++ b/views/proveedor_crear.html
@@ -50,13 +50,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Razón Social</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="FEDERAL EXPRESS S.A" ng-model="prov_razon_social" />
+                                <input type="text" class="form-control" placeholder="PACIFICO EXPRESS S.A" ng-model="prov_razon_social" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Giro</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Correo Express" ng-model="prov_giro" />
+                                <input type="text" class="form-control" placeholder="Transporte de Carga" ng-model="prov_giro" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -93,25 +93,32 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">e-mail</label>
                             <div class="col-md-5">
-                                <input type="email" class="form-control" placeholder="contact@fedex.com" ng-model="prov_email" />
+                                <input type="email" class="form-control" placeholder="contacto@pacificotransp.com" ng-model="prov_email" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Pagína WEB</label>
+                            <label class="col-md-3 control-label">Vencimiento Contrato </label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="http://www.fedex.com/cl" ng-model="prov_web" />
+                                <input type="text" class="form-control" placeholder="05/11/2017" ng-model="prov_celular" />
                             </div>
                         </div>
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Contacto</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Jorge Maestre Campusano" ng-model="prov_concacto" />
+                                <input type="text" class="form-control" placeholder="Jorge Maestre Campusano" ng-model="prov_contacto" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Celular </label>
+                            <label class="col-md-3 control-label">Celular Contacto</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="+56 9 3698 4477" ng-model="prov_celular" />
+                                <input type="text" class="form-control" placeholder="+56 9 3698 4477" ng-model="prov_celular2" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Telefono Contacto </label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="+56 2 2698 4477" ng-model="prov_telefono2" />
                             </div>
                         </div>
                         <div class="form-group">
