change provedor col

--- a/views/proveedor_crear.html
+++ b/views/proveedor_crear.html
@@ -67,8 +67,20 @@
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Numero</label>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="17800" ng-model="prov_numero" />
+                            </div>
+                            <label class="col-md-3 control-label">Comuna</label>
+                            <div class="col-md-3">
+                                <select class="form-control" ng-model="prov_estado">
+                                    <option>13101 Santiago</option>
+                                    <option>15101 Arica </option>
+                                    <option>15102 Camarones</option>
+                                    <option>01101 Iquique</option>
+                                    <option>02101 Antofagasta</option>
+                                    <option>03101 Copiapo</option>
+                                    <option>Otro</option>
+                                </select>
                             </div>
                         </div>
                         <div class="form-group">
