change provedor col

--- a/views/proveedor_crear.html
+++ b/views/proveedor_crear.html
@@ -72,7 +72,7 @@
                             </div>
                             <label class="col-md-1 control-label">Comuna</label>
                             <div class="col-md-3">
-                                <select class="form-control" ng-model="prov_estado">
+                                <select class="form-control" ng-model="prov_comuna">
                                     <option>13101 Santiago</option>
                                     <option>15101 Arica </option>
                                     <option>15102 Camarones</option>
